# kala-econ-games

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml  requirements.txt
.github/workflows/: test.yaml
kala/: __init__.py
kala/models/: agents.py  game.py  graphs.py  memory_rules.py  properties.py  strategies.py  traits.py
kala/models/graphs/: __init__.py
kala/settings/: __init__.py  consts.py
kala/utils/: misc.py  stats.py
src/kala/: __init__.py
src/kala/lab/: __init__.py  shock_experiments.py  survival_experiments.py  toolkit.py
src/kala/models/: __init__.py  agents.py  data.py  game.py  graphs.py  memory.py  memory_rules.py  properties.py  shocks.py  strategies.py  traits.py
src/kala/settings/: __init__.py  consts.py
src/kala/utils/: __init__.py  config.py  game_stats.py  misc.py  stats.py  wrappers.py
src/kala/utils/io/: __init__.py  netz.py
tests/: conftest.py  test_agents.py  test_game.py  test_graphs.py  test_memory_rules.py  test_properties.py  test_shocks.py  test_strategies.py  test_traits.py
