
[project]
name = "kala-econ-games"
version = "1.0.0"
authors = [
  { name = "Rodrigo L.C.", email = "rodrigolealc@ciencias.unam.mx" },
]
description = "Kala: agent-based econ games"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
# classifiers = [
# ]
# dynamic = ["version"]
dependencies = [
  "networkx",
  "numpy",
  "pendulum",
  "scipy",
  "statsmodels",
  "mkdocs>=1.5.3",
  "pydantic>=2.9.2",
  "zstandard>=0.23.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kala"]

[tool.ruff]
line-length = 100
target-version = 'py310'

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.mypy]
ignore_missing_imports = true
show_error_code_links = true

[tool.uv]
dev-dependencies = [
  "build>=1.0.3",
  "pytest>=7.4.3",
  "mypy>=1.7.0",
  "ipython>=8.17.2",
  "grip>=4.6.2",
  "ruff>=0.9.5",
]
